--- a/package.json
+++ b/package.json
@@ -10,10 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native/new-app-screen": "0.82.0",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native-stack": "^7.3.28",
+    "nativewind": "^4.2.1",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.1",
     "react-native": "0.82.0",
-    "@react-native/new-app-screen": "0.82.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-bootsplash": "^6.3.11",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-page-indicator": "^2.4.3",
+    "react-native-reanimated": "^4.1.3",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.17.1",
+    "react-native-svg": "^15.14.0",
+    "react-native-worklets": "^0.6.1",
+    "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -29,9 +42,11 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.1",
     "@types/react-test-renderer": "^19.1.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
+    "prettier": "^3.6.2",
+    "react-native-svg-transformer": "^1.5.1",
     "react-test-renderer": "19.1.1",
     "typescript": "^5.8.3"
   },
