--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/blur": "^4.4.1",
     "@react-native/new-app-screen": "0.82.0",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.28",
@@ -20,6 +21,7 @@
     "react-native": "0.82.0",
     "react-native-bootsplash": "^6.3.11",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-otp-entry": "^1.8.5",
     "react-native-page-indicator": "^2.4.3",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.5.2",
