--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
     android:theme="@style/AppTheme"
     android:usesCleartextTraffic="${usesCleartextTraffic}"
     android:supportsRtl="true">
+    <meta-data
+     android:name="com.google.android.geo.API_KEY"
+     android:value="AIzaSyCjNBQnTOlcDGN3GV0ZHAeaJvmK7IYEwbg"/>
     <activity
       android:name=".MainActivity"
       android:label="@string/app_name"
