--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/blur": "^4.4.1",
     "@react-native/new-app-screen": "0.82.0",
+    "@react-navigation/bottom-tabs": "^7.4.9",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.28",
     "nativewind": "^4.2.1",
@@ -20,9 +21,12 @@
     "react": "19.1.1",
     "react-native": "0.82.0",
     "react-native-bootsplash": "^6.3.11",
+    "react-native-gesture-handler": "^2.28.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "^1.26.17",
     "react-native-otp-entry": "^1.8.5",
     "react-native-page-indicator": "^2.4.3",
+    "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.17.1",
