--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@react-navigation/bottom-tabs": "^7.4.9",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/native-stack": "^7.3.28",
+    "date-fns": "^4.1.0",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.1",
     "react-native": "0.82.0",
     "react-native-bootsplash": "^6.3.11",
+    "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.26.17",
@@ -32,6 +34,7 @@
     "react-native-screens": "^4.17.1",
     "react-native-svg": "^15.14.0",
     "react-native-worklets": "^0.6.1",
+    "react-qr-code": "^2.0.18",
     "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
