--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/blur": "^4.4.1",
+    "@react-native-community/datetimepicker": "^8.5.0",
     "@react-native/new-app-screen": "0.82.0",
     "@react-navigation/bottom-tabs": "^7.4.9",
     "@react-navigation/native": "^7.1.18",
@@ -26,8 +27,11 @@
     "react-native-gesture-handler": "^2.28.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.26.17",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-otp-entry": "^1.8.5",
     "react-native-page-indicator": "^2.4.3",
+    "react-native-pager-view": "^6.9.1",
+    "react-native-progress": "^5.0.1",
     "react-native-raw-bottom-sheet": "^3.0.0",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "^5.5.2",
