--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-loader-kit": "^4.1.0",
     "react-native-maps": "^1.26.17",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-otp-entry": "^1.8.5",
